--- a/src/pages/ideas.astro
+++ b/src/pages/ideas.astro
@@ -1,34 +1,33 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
-import { ProjectBracket } from "../components/ProjectComparison";
-import ProjectCard from "../components/ProjectCard";
-import SectionTitle from "../components/SectionTitle.astro";
-import { persona } from "../persona";
-import {NewsletterForm}from'../components/NewsletterForm'
+import Layout from "../layouts/Layout.astro"
+import Header from "../components/Header.astro"
+import { ProjectBracket } from "../components/ProjectComparison"
+import ProjectCard from "../components/ProjectCard"
+import SectionTitle from "../components/SectionTitle.astro"
+import { persona } from "../persona"
 
 const projectIdeas = await Astro.locals.db.query.project.findMany({
   with: { votes: true },
-  where: (project, { eq }) => eq(project.active, false),
-});
+  where: (project, { eq }) => eq(project.active, false)
+})
 const activeProject = await Astro.locals.db.query.project.findFirst({
-  where: (project, { eq }) => eq(project.active, true),
-});
-
-
+  where: (project, { eq }) => eq(project.active, true)
+})
 ---
 
 <Layout title={persona.seo.title} desc={persona.seo.description}>
   <Header title={persona.firstName} description={persona.description} />
   {
     activeProject && (
-    <>
-    <SectionTitle As="h2" title="Le projet en cours" />
-      <ProjectCard project={activeProject} isCurrent client:load />
-      </>
+      <div class='mx-auto mb-8 w-10/12 md:mb-12 md:w-4/5'>
+        <SectionTitle As='h2' title='Le projet en cours' />
+        <ProjectCard project={activeProject} isCurrent client:load />
+      </div>
     )
   }
-  <ProjectBracket projects={projectIdeas} activeProjectId={activeProject.id} client:load />
-
- <NewsletterForm />
+  <ProjectBracket
+    projects={projectIdeas}
+    activeProjectId={activeProject.id}
+    client:load
+  />
 </Layout>
